[package]
name = "mfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
fuser = { version = "~0.11.0", git = "ssh://git@github.com/awslabs/s3-file-connector.git", branch = "fuser/async" }
libc = "0.2.135"
